Fixed jumbotron on mobile. Improved styling of gallery thumbnails.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -262,4 +262,12 @@ p {
   #credits img {
     width: 47%;
   }
+  .jumbotron {
+    h1 {
+      font-size: 50px;
+    }
+    p {
+      font-size: 17px;
+    }
+  }
 }
